small fixes for the collapsable properties box

--- a/templates/style.css
+++ b/templates/style.css
@@ -235,18 +235,16 @@ body.knowl #header {
   padding-right: 30px;
 }
 #properties-collapser {
-  /*display: inline;*/
   cursor: pointer;
   font-size: 17px;
   font-weight: bold;
   text-align: center;
-  vertical-align: center;
   border: 1px solid ;
-  width: 18px;
-  height: 18px;
+  width: 20px;
+  height: 17px;
   position: absolute;
   top:   3px;
-  right: 5px;
+  right: 3px;
 
   border-radius: 2px;
   -webkit-border-radius: 2px;
